REPL: Add reset command
Finally, no more unplugging, holding down BOOTSEL, replugging loops.

Signed-off-by: Christopher N. Hesse <raymanfx@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(pokal
         dnsserver/dnsserver.c
         repl.c
         repl_fs.c
+        repl_reset.c
         fs.c
         )
 
