--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,9 @@ add_executable(pokal
         repl.c
         repl_fs.c
         repl_reset.c
+        repl_ups.c
         fs.c
+        ina219.c
         )
 
 target_include_directories(pokal PRIVATE
@@ -43,6 +45,7 @@ target_link_libraries(pokal
         pico_stdlib
         pico_usb_reset_interface
         littlefs
+        hardware_i2c
         )
 
 # PICO_CMAKE_CONFIG: PICO_STDIO_USB_CONNECT_WAIT_TIMEOUT_MS, Maximum number of milliseconds to wait during initialization for a CDC connection from the host (negative means indefinite) during initialization, default=0, group=pico_stdio_usb
