--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(Pico_ePaper_Code/c)
+
 add_library(littlefs STATIC
     littlefs/lfs.c
     littlefs/lfs.h
@@ -6,3 +8,25 @@ add_library(littlefs STATIC
 
 target_include_directories(littlefs PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/littlefs)
+
+add_library(epaper583b STATIC
+    Pico_ePaper_Code/c/lib/Config/DEV_Config.c
+    Pico_ePaper_Code/c/lib/e-Paper/EPD_5in83b_V2.c)
+
+target_link_libraries(epaper583b
+    pico_stdlib
+    hardware_spi)
+
+target_include_directories(epaper583b PUBLIC
+    Pico_ePaper_Code/c/lib/Config
+    Pico_ePaper_Code/c/lib/e-Paper)
+
+add_library(epd_gui STATIC
+    Pico_ePaper_Code/c/lib/GUI/GUI_Paint.c)
+
+target_link_libraries(epd_gui
+    Fonts
+    epaper583b)
+
+target_include_directories(epd_gui PUBLIC
+    Pico_ePaper_Code/c/lib/GUI)
