REPL: Add epaper gui command
Used to (re)draw the GUI on the Waveshare 5'83 ePaper display.

Signed-off-by: Christopher N. Hesse <raymanfx@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_executable(pokal
         fs.c
         ina219.c
         epaper.c
+        epaper_gui.c
         )
 
 target_include_directories(pokal PRIVATE
